# biometrics-assignments

./: CMakeLists.txt  README.md  conanfile.txt  imgui.ini  tmp.txt  tmp2.txt
.github/workflows/: ci.yml
assets/filters/: gaussian3x3.ftr  perwittH3x3.ftr  perwittV3x3.ftr  sobelH3x3.ftr  sobelV3x3.ftr
config/: config.hpp.in
include/: Algorithm.hpp  CMakeLists.txt  DirManager.hpp  Framebuffer.hpp  Histogram.hpp  Image.hpp  Quad.hpp  Shader.hpp  Skeletonization.hpp  Texture2D.hpp  Types.hpp  Window.hpp  Window.tpp
res/stbi/: stbi.cpp
shaders/: .ninja_log  CMakeLists.txt  build.ninja
shaders/src/basic_shader/: shader.frag  shader.vert
shaders/src/convolution_shader/: shader.frag
shaders/src/drawing_cursor_shader/: shader.frag  shader.vert
shaders/src/equalization_shader/: shader.frag
shaders/src/global_fill_shader/: shader.frag  shader.vert
shaders/src/local_binarization_shader/: shader.frag
shaders/src/median_filter_shader/: shader.frag
shaders/src/otsu_binarization_shader/: shader.frag  shader.vert
shaders/src/pixelization_shader/: shader.comp
shaders/src/stretching_shader/: shader.frag
shaders/src/threshold_binarization_shader/: shader.frag
src/: Algorithm.cpp  CMakeLists.txt  DirManager.cpp  Framebuffer.cpp  Histogram.cpp  Image.cpp  Quad.cpp  Shader.cpp  Skeletonization.cpp  Texture2D.cpp  Window.cpp  main.cpp
